--- a/web/style.css
+++ b/web/style.css
@@ -66,7 +66,7 @@ h1 {
     font-size: 1.1em;
     font-weight: bold;
     background: #ffffff;
-    color: #2a5298;
+    color: #89CFF0;
     border: none;
     border-radius: 20px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
