--- a/web/style.css
+++ b/web/style.css
@@ -37,7 +37,9 @@ h1 {
 }
 
 .nav-button.territorium {
-    background: #c0392b;
+    background-image: url('assets/wand/Wall32.png');
+    background-size: cover;
+    background-repeat: repeat;
     color: #000000;
 }
 
@@ -70,6 +72,7 @@ footer {
     color: #ffffff;
 }
 
+/* Toolbar-Styles für edit.html und ter.html */
 .ter_toolbar {
     display: flex;
     gap: 16px;
