--- a/web/style.css
+++ b/web/style.css
@@ -63,12 +63,12 @@ ul {
 }
 
 ul li::marker {
-    color: #000000;
+    color: #c47a0b;
 }
 
 footer {
     margin-top: 50px;
     padding: 20px;
     font-size: 0.9em;
-    color: #555;
+    color: #2f2f2f;
 }
